[setup-java] Fix issue with versions to uninstall